--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "cross-env": "^5.2.0",
-    "element-ui": "^2.4.11",
-    "express": "^4.16.4",
     "node-sass": "^4.13.0",
     "nuxt": "^2.0.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "vue-material": "^1.0.0-beta-11",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.1",
