--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "axios": "^0.19.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
     "cross-env": "^5.2.0",
     "node-sass": "^4.13.0",
     "nuxt": "^2.0.0",
