--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^2.0.0",
     "sass-loader": "^8.0.0",
     "tslint": "^6.0.0",
+    "vue-carousel": "^0.18.0",
     "vue-material": "^1.0.0-beta-11",
     "vuelidate": "^0.7.5"
   },
