changes for element

--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "node-sass": "^4.13.0",
     "nuxt": "^2.0.0",
     "sass-loader": "^8.0.0",
-    "tslint": "^6.0.0",
-    "vue-carousel": "^0.18.0",
-    "vue-material": "^1.0.0-beta-11",
-    "vuelidate": "^0.7.5"
+    "tslint": "^6.0.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.1",
