--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "nuxt-demo",
-  "version": "1.0.0",
-  "description": "Demo website",
-  "author": "Saher",
-  "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.1",
-    "@fortawesome/free-regular-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "axios": "^0.19.2",
-    "cross-env": "^5.2.0",
-    "element-ui": "^2.13.0",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.13.0",
-    "nuxt": "^2.0.0",
-    "sass-loader": "^8.0.0",
-    "tslint": "^6.0.0"
-  },
-  "devDependencies": {
-    "@nuxt/typescript-build": "^0.5.1",
-    "element-theme-chalk": "^2.13.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.19.1"
-  }
+    "name": "nuxt-demo",
+    "version": "1.0.0",
+    "description": "Demo website",
+    "author": "Saher",
+    "private": true,
+    "scripts": {
+        "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+        "build": "nuxt build",
+        "start": "cross-env NODE_ENV=production node server/index.js",
+        "generate": "nuxt generate"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.27",
+        "@fortawesome/free-brands-svg-icons": "^5.12.1",
+        "@fortawesome/free-regular-svg-icons": "^5.12.1",
+        "@fortawesome/free-solid-svg-icons": "^5.12.1",
+        "@fortawesome/vue-fontawesome": "^0.1.9",
+        "axios": "^0.19.2",
+        "body-parser": "^1.19.0",
+        "cookie-parser": "~1.4.4",
+        "cross-env": "^5.2.0",
+        "element-ui": "^2.13.0",
+        "express": "^4.17.1",
+        "express-validator": "^6.3.1",
+        "http-errors": "^1.6.3",
+        "lodash": "^4.17.15",
+        "mongoose": "^5.8.7",
+        "net": "^1.0.2",
+        "node-sass": "^4.13.1",
+        "nuxt": "^2.11.0",
+        "sass-loader": "^8.0.2",
+        "tslint": "^6.0.0"
+    },
+    "devDependencies": {
+        "@nuxt/typescript-build": "^0.5.6",
+        "element-theme-chalk": "^2.13.0",
+        "nodemon": "^1.18.9",
+        "prettier": "^1.19.1"
+    }
 }
