changes for api

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Saher",
     "private": true,
     "scripts": {
-        "dev": "cross-env NODE_ENV=development nodemon server/index.js , api/index.js --watch server",
+        "dev": "cross-env NODE_ENV=development nodemon server/index.js  --watch server",
         "build": "nuxt build",
         "start": "cross-env NODE_ENV=production node server/index.js",
         "generate": "nuxt generate"
@@ -20,15 +20,17 @@
         "@nuxtjs/axios": "^5.9.5",
         "@nuxtjs/pwa": "^3.0.0-beta.20",
         "axios": "^0.19.2",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cookie-parser": "~1.4.4",
         "cross-env": "^5.2.0",
         "element-ui": "^2.13.0",
         "express": "^4.17.1",
         "express-validator": "^6.3.1",
-        "http-errors": "^1.6.3",
+        "http-errors": "^1.7.3",
+        "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
-        "mongoose": "^5.8.7",
+        "mongoose": "^5.8.12",
         "net": "^1.0.2",
         "node-sass": "^4.13.1",
         "nuxt": "^2.11.0",
