--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/vue-fontawesome": "^0.1.9",
         "@nuxtjs/auth": "^4.8.5",
         "@nuxtjs/axios": "^5.9.5",
+        "@nuxtjs/dotenv": "^1.4.1",
         "@nuxtjs/pwa": "^3.0.0-beta.20",
         "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
